--- a/two point correlation.ipynb
+++ b/two point correlation.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from numpy import load,logspace\n",
-    "from halotools.mock_observables import wp\n",
-    "from Corrfunc.theory.wp import wp\n",
+    "from halotools.mock_observables import wp, wp_jackknife\n",
+    "#from Corrfunc.theory.wp import wp\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,28 +44,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  82.39981,  105.10136,  109.69871],\n",
-       "       [  85.1352 ,  106.11062,  108.60281],\n",
-       "       [  82.25298,  107.41747,  109.42442],\n",
-       "       ...,\n",
-       "       [2292.4702 , 2489.9434 , 2331.3264 ],\n",
-       "       [2458.6357 , 2269.356  , 2296.908  ],\n",
-       "       [2393.8906 , 2259.3062 , 2398.0464 ]], dtype=float32)"
+       "26139871"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fin_sat"
+    "fin_sat.shape[0]"
    ]
   },
   {
@@ -74,11 +68,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1min 17s, sys: 22.2 s, total: 1min 39s\n",
-      "Wall time: 4.51 s\n"
+     "ename": "TypeError",
+     "evalue": "wp() got an unexpected keyword argument 'boxsize'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: wp() got an unexpected keyword argument 'boxsize'"
      ]
     }
    ],
@@ -92,19 +89,30 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "wp() got an unexpected keyword argument 'sample1'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: wp() got an unexpected keyword argument 'sample1'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 57.4 s, sys: 1min 40s, total: 2min 38s\n",
+      "Wall time: 3min 40s\n"
      ]
     }
    ],
    "source": [
     "%time corr1 = wp(sample1 = fin_sat, rp_bins = bins, pi_max = pi_max, period=L, num_threads='max')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Nran = fin_sat.shape[0]*5\n",
+    "xran = np.random.uniform(0, L, Nran)\n",
+    "yran = np.random.uniform(0, L, Nran)\n",
+    "zran = np.random.uniform(0, L, Nran)\n",
+    "randoms = np.vstack((xran,yran,zran)).T\n",
+    "corr_wp, wp_cov = wp_jackknife(sample1 = fin_sat,randoms = randoms, rp_bins = bins, pi_max = pi_max, Nsub=10 , period=L, num_threads='max')"
    ]
   },
   {
