--- a/ultranest.ipynb
+++ b/ultranest.ipynb
@@ -139,19 +139,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import os\n",
+    "import joblib\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = 'wp_model.sav'\n",
+    "# load the model from disk\n",
+    "model = joblib.load(filename)\n",
+    "wp_data = np.load('/mnt/data4/Abhishek/WP/wp_galaxies_0000.npy')[0]\n",
+    "x_truth = np.array([13.088658, 14.060000, 0.980000, 1.130000, 0.900000])\n",
+    "def wp_model(par):\n",
+    "    result = model.predict(par.reshape(1,-1))\n",
+    "    return result[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ultranest] Sampling 400 live points from prior ...\r\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([260.72732606, 243.0063292 , 224.23782478, 204.55128041,\n",
+       "       184.62927055, 165.43953241, 147.31829638, 131.15716196,\n",
+       "       116.14123974, 103.01030533,  91.09196478,  79.7561811 ,\n",
+       "        68.57939669,  58.50999382,  49.98880457,  42.88159167,\n",
+       "        37.07487596,  32.14038294,  27.91874679,  24.27102418,\n",
+       "        20.97939904,  17.99314816,  15.25012293,  12.74601037,\n",
+       "        10.48424843,   8.45676885,   6.65534675,   5.10077343,\n",
+       "         3.78507593,   2.68698882])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "!python wp_ultranest.py"
+    "\n",
+    "model.predict(x_truth.reshape(1, -1))[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = (13.088658, 14.060000, 0.980000, 1.130000, 0.900000)\n",
+    "params = np.array(params).reshape(1,-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 5)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[260.72732606, 243.0063292 , 224.23782478, 204.55128041,\n",
+       "        184.62927055, 165.43953241, 147.31829638, 131.15716196,\n",
+       "        116.14123974, 103.01030533,  91.09196478,  79.7561811 ,\n",
+       "         68.57939669,  58.50999382,  49.98880457,  42.88159167,\n",
+       "         37.07487596,  32.14038294,  27.91874679,  24.27102418,\n",
+       "         20.97939904,  17.99314816,  15.25012293,  12.74601037,\n",
+       "         10.48424843,   8.45676885,   6.65534675,   5.10077343,\n",
+       "          3.78507593,   2.68698882]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(params)"
    ]
   },
   {
@@ -178,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
